--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,10 +25,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black isort pylint pydocstyle pytest pytest-cov build
-        pip install -r requirements.txt
-        pip install -e .
-    
+        pip install build
+        pip install -e ".[dev,viz,docs]"
+        
     - name: Run Black
       run: black . --check
       continue-on-error: true
